correcting alignment

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h1 {
 #lists {
     color: blue;
     text-align: center;
-    padding-left: 500px;
-    padding-right: 500px;
+    padding-left: 100px;
+    padding-right: 100px;
 }
 
 #bio-image {
